@@ -50,6 +50,8 @@ Version 1.4.7 - CVS
     Solutions).
   - Add note to conf.pl / config_default.php to warn users that set
     sensitive passwords in that file to properly secure it.
+  - Prevent modifications in advanced identities, when editing of
+    identities is disabled.
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
